--- a/loginPage.html
+++ b/loginPage.html
@@ -38,10 +38,10 @@
     </div>
 
     <script type="text/javascript">
-        var naver_id_login = new naver_id_login("A0hbRdKPEVnTob6A7Duc", "http://127.0.0.1:5500/album.html");
+        var naver_id_login = new naver_id_login("A0hbRdKPEVnTob6A7Duc", "https://col0828.github.io/Brody/album.html");
         var state = naver_id_login.getUniqState();
         naver_id_login.setButton("green", 3, 40);
-        naver_id_login.setDomain("http://127.0.0.1:5500/loginPage.html");
+        naver_id_login.setDomain("https://col0828.github.io/Brody/loginPage.html");
         naver_id_login.setState(state);
         naver_id_login.setPopup();
         naver_id_login.init_naver_id_login();
