--- a/album.html
+++ b/album.html
@@ -55,7 +55,7 @@
     </div>
 
     <script type="text/javascript">
-        var naver_id_login = new naver_id_login("A0hbRdKPEVnTob6A7Duc", "http://localhost:5500/album.html");
+        var naver_id_login = new naver_id_login("A0hbRdKPEVnTob6A7Duc", "https://col0828.github.io/Brody/album.html");
         // 접근 토큰 값 출력
         alert(naver_id_login.oauthParams.access_token);
         // 네이버 사용자 프로필 조회
