--- a/wom.html
+++ b/wom.html
@@ -177,8 +177,10 @@
             </div>
         </div>
     </body>
-
+        <script type="text/javascript">
+        var naver_id_login = new naver_id_login("A0hbRdKPEVnTob6A7Duc", "https://col0828.github.io/Brody/album.html")
+        // 네이버 사용자 프로필 조회
+        naver_id_login.get_naver_userprofile("naverSignInCallback()");
+        // 네이버 사용자 프로필 조회 이후 프로필 정보를 처리할 callback function
+    </script>
     </html>
-</body>
-
-</html>
